services/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: vaultwarden
  type: ClusterIP
